add_executable(bench_logging_iteration_logger iteration_logger.cpp)
target_add_to_benchmark(bench_logging_iteration_logger)

add_executable(bench_logging_write_trace_logs write_trace_logs.cpp)
target_add_to_benchmark(bench_logging_write_trace_logs)

add_executable(bench_logging_log_sinks log_sinks_test.cpp)
target_add_custom_benchmark(bench_logging_log_sinks)
